--- a/db_generator/package.json
+++ b/db_generator/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "restart": "node app-knex.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "config": "^3.3.6",
+    "knex": "^0.95.10",
     "pg": "^8.7.1"
   }
 }
